feat: dynamically position hoverbuttons based on current route

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -38,7 +38,7 @@
 
   /* CONSTANTS */
   --app-padding-vertical: 35px;
-  --app-padding-horizontal: 20px;
+  --app-padding-horizontal: 30px;
   
   --nav-min-height: 85px; /* minimal height of the bottom tab navigation bar */
   --hover-button-nav-margin: 40px;
@@ -130,6 +130,14 @@ body {
   justify-content: center;
   align-items: flex-start;
   width: 100%;
+}
+
+.high-hover-button { /* show the hoverButton above the tab bar */
+  bottom: calc(var(--nav-min-height) + var(--hover-button-nav-margin));
+}
+
+.low-hover-button { /* to show the hover button at the bottom, only for login and register screens */
+  bottom: var(--hover-button-nav-margin)
 }
 
 /* TYPOGRAPHY */
