--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -236,12 +236,36 @@ a {
   height: var(--icon-height-s);
 }
 
-/* PADDING */
-.padding-top-s {
-  padding-top: 5px
+
+/* MARGIN (Feel free to add stuff as you go */
+
+/* TOP */
+.margin-top-s {
+  margin-top: 5px;
 }
 
-/* MARGIN */
+/* LEFT */
+.margin-left-s {
+  margin-left: 5px;
+}
+
+.margin-left-md {
+  margin-left: 10px;
+}
+
+.margin-left-l {
+  margin-left: 20px;
+}
+
+/* BOTTOM */
+.margin-botton-s {
+  margin-bottom: 5px;
+}
+
 .margin-botton-md {
+  margin-bottom: 10px;
+}
+
+.margin-botton-l {
   margin-bottom: 20px;
 }
