feat: basic rideCard with RideGetDto

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -222,6 +222,10 @@ a {
   font-weight: var(--font-weight-bold);
 }
 
+.text-semibold {
+  font-weight: var(--font-weight-semibold);
+}
+
 /* text decoration */
 .text-strikethrough {
   text-decoration: line-through;
