--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -50,6 +50,7 @@
   --font-weight-semibold: 500;
   --font-weight-bold: 600;
 
+  --font-size-xxl: 52px;
   --font-size-xl: 26px;
   --font-size-l: 20px;
   --font-size-md: 18px;
@@ -230,6 +231,9 @@ a {
 }
 
 /* Text font sizes */
+.text-xxl {
+  font-size: var(--font-size-xxl)
+}
 .text-xl {
   font-size: var(--font-size-xl)
 }
@@ -329,6 +333,12 @@ a {
 .margin-top-s {
   margin-top: 5px;
 }
+.margin-top-m {
+  margin-top: 10px;
+}
+.margin-top-l {
+  margin-top: 20px;
+}
 
 /* LEFT */
 .margin-left-s {
@@ -357,6 +367,9 @@ a {
 }
 .margin-bottom-xl {
   margin-bottom: 40px;
+}
+.margin-bottom-xxl {
+  margin-bottom: 80px;
 }
 
 .v--default-css .c-toast {
