feat: placehodler text for MyRides Screen if there are no current rides

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -292,6 +292,11 @@ a {
   color: var(--color-support-positive-500)
 }
 
+.center-text {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* ICONS */
 .icon-xl {
   height: var(--icon-xl);
